fix button overflow and x-scroll on iphone

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -34,6 +34,9 @@
   height: 90vh;
   @include width();
   text-align: center;
+  @media only screen and (max-width: 600px) {
+    padding-top: 5vw;
+  }
 
   display: flex;
   flex-direction: column;
