--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -9,7 +9,7 @@ $placeholder-color: #a6a6a6;
     height: 2em;
     text-align: center;
     margin: 10px 0;
-    font-size: 1.3em;
+    font-size: 1.6em;
     border: none;
     border-radius: 4px;
     letter-spacing: 1px;
@@ -17,5 +17,9 @@ $placeholder-color: #a6a6a6;
     &::placeholder {
       color: $placeholder-color;
     }
+  }
+
+  .btn {
+    font-size: 1.6em;
   }
 }
