--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -40,7 +40,8 @@ img {
   border-radius: 4px;
   width: 10em;
   height: 2em;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
+  touch-action: manipulation;
 
   &.btn-primary {
     @include primaryColor(true);
